# ema-vertexai-agents

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: deploy.yaml
.idx/: dev.nix  mcp.json
analyzer_agent/: __init__.py  agent.py  deploy.py
analyzer_agent/sub_agents/: __init__.py  data_scientist_agent.py  electric_engineer_agent.py  reviewer_agent.py
analyzer_agent/tools/: __init__.py  store_management_tool.py
