[project]
name = "ema-vertexai-agents"
version = "0.1.0"
description = "Multi-agent system working as the backend of the Electric Magnitudes Analyzer tool."
authors = [
    {name = "Bruno Lima Cardoso", email = "blimacardoso@gmail.com"},
]
dependencies = [
    "google-cloud-aiplatform[adk,agent_engines]>=1.103.0",
    "google-generativeai>=0.8.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
pre_commit = "git add -i"
commit = "cz commit"
serve = "adk web ./analyzer_agent"

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
]
dev = [
    "ruff>=0.12.3",
    "pre-commit>=4.2.0",
    "commitizen>=4.8.3",
]
